@@ -221,10 +221,10 @@ AC_ARG_ENABLE(libtheora,AC_HELP_STRING([--enable-libtheora],
 			[use libtheora if found (default=disabled)]),
 			[ac_cv_enable_libtheora=$enableval],
 			[ac_cv_enable_libtheora=no])
-AC_ARG_ENABLE(libvorbis,AC_HELP_STRING([--enable-libvorbis], 
-			[use libvorbis if found (default=disabled)]),
-			[ac_cv_enable_libvorbis=$enableval],
-			[ac_cv_enable_libvorbis=no])
+dnl AC_ARG_ENABLE(libvorbis,AC_HELP_STRING([--enable-libvorbis], 
+dnl 			[use libvorbis if found (default=disabled)]),
+dnl 			[ac_cv_enable_libvorbis=$enableval],
+dnl 			[ac_cv_enable_libvorbis=no])
 #########################################################
 #########################################################
 
@@ -278,12 +278,12 @@ if test "${ac_cv_enable_libmp3lame}" = "yes"; then
 fi
 AM_CONDITIONAL(HAVE_LIBMP3LAME, test x$ac_cv_lib_mp3lame_lame_init = xyes)
 
-if test "${ac_cv_enable_libvorbis}" = "yes"; then
-	AC_CHECK_LIB(vorbisenc, vorbis_encode_init,,
-					[echo "To use the vorbis audio codec you need libvorbisenc/libvorbisenc-dev"],
-					[-lvorbis])
-fi
-AM_CONDITIONAL(HAVE_LIBVORBISENC, test x$ac_cv_lib_vorbisenc_vorbis_encode_init = xyes)
+dnl if test "${ac_cv_enable_libvorbis}" = "yes"; then
+dnl 	AC_CHECK_LIB(vorbisenc, vorbis_encode_init,,
+dnl 					[echo "To use the vorbis audio codec you need libvorbisenc/libvorbisenc-dev"],
+dnl 					[-lvorbis])
+dnl fi
+dnl AM_CONDITIONAL(HAVE_LIBVORBISENC, test x$ac_cv_lib_vorbisenc_vorbis_encode_init = xyes)
 
 if test "${ac_cv_enable_libtheora}" = "yes"; then
 	AC_CHECK_LIB(ogg, ogg_sync_init,,[echo "To use the theora video codec you also need libogg/libogg-dev"])
@@ -337,7 +337,7 @@ dnl 	static_avutil=$ac_my_static_avutil_save
 dnl fi
 
 test x$ac_cv_lib_mp3lame_lame_init = xyes && ac_my_ffmpeg_cfg_lib_switch="--enable-libmp3lame"
-test x$ac_cv_lib_vorbisenc_vorbis_encode_init = xyes && ac_my_ffmpeg_cfg_lib_switch="${ac_my_ffmpeg_cfg_lib_switch} --enable-libvorbis"
+dnl test x$ac_cv_lib_vorbisenc_vorbis_encode_init = xyes && ac_my_ffmpeg_cfg_lib_switch="${ac_my_ffmpeg_cfg_lib_switch} --enable-libvorbis"
 test x$ac_cv_lib_theora_theora_encode_init = xyes && ac_my_ffmpeg_cfg_lib_switch="${ac_my_ffmpeg_cfg_lib_switch} --enable-libogg --enable-libtheora"
 
 # if cache empty (not tested or failed) and want static avcodec (then it failed) ...
