@@ -119,9 +119,7 @@ typedef enum
 #ifdef HAVE_LIBMP3LAME
     AU_CODEC_MP3,
 #endif     // HAVE_LIBMP3LAME
-#ifdef HAVE_LIBVORBISENC
     AU_CODEC_VORBIS,
-#endif     // HAVE_LIBVORBISENC
     AU_CODEC_PCM16,
 #endif     // HAVE_FFMPEG_AUDIO
     NUMAUCODECS
